--- a/lib/premiere_ecoute_web/live/session_live.html.heex
+++ b/lib/premiere_ecoute_web/live/session_live.html.heex
@@ -144,7 +144,7 @@
 
                   <%= if @listening_session.status == :active do %>
                     <button
-                      phx-click="end_session"
+                      phx-click="stop_session"
                       class="flex-1 bg-red-600 hover:bg-red-700 text-white py-2 px-4 rounded-lg font-medium transition-colors text-sm flex items-center justify-center space-x-2"
                     >
                       <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20">
@@ -641,7 +641,7 @@
                         <!-- Horizontal Histogram taking ~80% width -->
                         <div class="flex items-end justify-center h-20 mx-auto w-4/5">
                           <%= for {rating, votes} <- [
-                            {1, 2}, {2, 1}, {3, 4}, {4, 3}, {5, 8}, 
+                            {1, 2}, {2, 1}, {3, 4}, {4, 3}, {5, 8},
                             {6, 12}, {7, 15}, {8, 9}, {9, 6}, {10, 3}
                           ] do %>
                             <div class="flex-1 flex flex-col items-center px-1">
